[tool.poetry]
name = "dude"
version = "0.1.2"
description = "tool similar to du but a little fancier i guess"
authors = ["Andrew Herbig <notandrewherbig@gmail.com>"]
license = "MIT"
repository = "https://github.com/andrew12/dude"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.7"
humanize = "^3.1.0"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
isort = "^5.8.0"
black = "^21.4b2"
coverage = "^5.5"

[tool.poetry.scripts]
dude = "dude:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
