[tool.poetry]
name = "dude"
version = "0.1.4"
description = "tool similar to du but a little fancier i guess"
authors = ["Hannah Herbig <nothannahherbig@gmail.com>"]
license = "MIT"
repository = "https://github.com/hannahherbig/dude"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
humanize = ">=3.1,<5.0"
tabulate = ">=0.8.7,<0.10.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.21,<4.0"
isort = "^5.11.5"
black = "^23.3"
coverage = "^7.2"

[tool.poetry.scripts]
dude = "dude:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "strict"
